Library/AXL(Library)/Visual Basic/AXDev.bas


'========== Common commands of standard I/O dvices =========================================================================
' The API for return parameter setting value of each slave device.
Public Declare Function AxlM3GetStationParameter Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal wNo As Integer, ByVal bSize As Byte, ByVal bModuleType As Byte, ByRef pbParam As Byte) As Long
' The API for setting parameter value of each slave device.
Public Declare Function AxlM3SetStationParameter Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal wNo As Integer, ByVal bSize As Byte, ByVal bModuleType As Byte, ByRef pbParam As Byte) As Long
' The API for return ID value of each slave device.
Public Declare Function AxlM3GetStationIdRd Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal bIdCode As Byte, ByVal bOffset As Byte, ByVal bSize As Byte, ByVal bModuleType As Byte, ByRef pbParam As Byte) As Long
' The API used as invalid command of each slave device.
Public Declare Function AxlM3SetStationNop Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal bModuleType As Byte) As Long
' The API for set up each slave device.
Public Declare Function AxlM3SetStationConfig Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal bConfigMode As Byte, ByVal bModuleType As Byte) As Long
' The API for return alarm and warning status value of each slave device.
Public Declare Function AxlM3GetStationAlarm Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal wAlarmRdMod As Integer, ByVal wAlarmIndex As Integer, ByVal bModuleType As Byte, ByRef pwAlarmData As Integer) As Long
' The API for clearing alarm and warning status value of each slave device.
Public Declare Function AxlM3SetStationAlarmClear Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal wAlarmClrMod As Integer, ByVal bModuleType As Byte) As Long
' The API for setting establish synchronous communication with each slave device.
Public Declare Function AxlM3SetStationSyncSet Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal bModuleType As Integer) As Long
' The API for setting connection with each slave device.
Public Declare Function AxlM3SetStationConnect Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal bVer As Byte, ByVal bComMode As Byte, ByVal bComTime As Byte, ByVal bProfileType As Byte, ByVal bModuleType As Byte) As Long
' The API for setting disconnection with each slave device.
Public Declare Function AxlM3SetStationDisConnect Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal bModuleType As Byte) As Long
' The API for return of non-volatile parameter setting value.
Public Declare Function AxlM3GetStationStoredParameter Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal wNo As Integer, ByVal bSize As Byte, ByVal bModuleType As Byte, ByRef pbParam As Byte) As Long
' The API for setting non-volatile parameter value of each slave device.
Public Declare Function AxlM3SetStationStoredParameter Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal wNo As Integer, ByVal bSize As Byte, ByVal bModuleType As Byte, ByRef pbParam As Byte) As Long
' The API for return of memory setting value of each slave device.
Public Declare Function AxlM3GetStationMemory Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal wSize As Integer, ByVal dwAddress As Long, ByVal bModuleType As Byte, ByVal bMode As Byte, ByVal bDataType As Byte, ByRef pbData As Byte) As Long
' The API for setting memory value of each slave device.
Public Declare Function AxlM3SetStationMemory Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal wSize As Integer, ByVal dwAddress As Long, ByVal bModuleType As Byte, ByVal bMode As Byte, ByVal bDataType As Byte, ByRef pbData As Byte) As Long


'========== Connection commands of standard I/O dvices =========================================================================
' The API for setting value of automatic access mode of each re-ordered slave device.
Public Declare Function AxlM3SetStationAccessMode Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal bModuleType As Byte, ByVal bRWSMode As Byte) As Long
' The API for return of automatic access mode setting value of each re-ordered slave device.
Public Declare Function AxlM3GetStationAccessMode Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal bModuleType As Byte, ByRef bRWSMode As Byte) As Long
' The API for set synchronous auto connect mode of each slave device.
Public Declare Function AxlM3SetAutoSyncConnectMode Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal bModuleType As Byte, ByVal dwAutoSyncConnectMode As Long) As Long
' The API for return of synchronous auto connect mode setting value of each slave device.
Public Declare Function AxlM3GetAutoSyncConnectMode Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal bModuleType As Byte, ByRef dwpAutoSyncConnectMode As Long) As Long
' The API for establish a single synchronization connection to each slave device.
Public Declare Function AxlM3SyncConnectSingle Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal bModuleType As Byte) As Long
' The API for establish a single synchronization disconnection to each slave device.
Public Declare Function AxlM3SyncDisconnectSingle Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal bModuleType As Byte) As Long
' The API for verifying connection status with slave device.
Public Declare Function AxlM3IsOnLine Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByRef dwData As Long) As Long


'========== Profile commands of standard I/O =========================================================================
' The API for return of data setting value for each synchronous I/O slave device.
Public Declare Function AxlM3GetStationRWS Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal bModuleType As Byte, ByRef pdwParam As Long, ByVal bSize As Byte) As Long
' The API for setting data value for each synchronous I/O slave device.
Public Declare Function AxlM3SetStationRWS Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal bModuleType As Byte, ByRef pdwParam As Long, ByVal bSize As Byte) As Long
' The API for return of data setting value for each asynchronous I/O slave device.
Public Declare Function AxlM3GetStationRWA Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal bModuleType As Byte, ByRef pdwParam As Long, ByVal bSize As Byte) As Long
' The API for setting data value for each asynchronous I/O slave device.
Public Declare Function AxlM3SetStationRWA Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal bModuleType As Byte, ByRef pdwParam As Long, ByVal bSize As Byte) As Long


' Set the MLIII adjustment operation
' dwReqCode == 0x1005 : parameter initialization : 20sec
' dwReqCode == 0x1008 : absolute encoder reset   : 5sec
' dwReqCode == 0x100E : automatic offset adjustment of motor current detection signals  : 5sec
' dwReqCode == 0x1013 : Multiturn limit setting  : 5sec
Public Declare Function AxmM3AdjustmentOperation Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwReqCode As Long) As Long


' API for diagnosing home search progress.(Only for M3)
Public Declare Function AxmHomeGetM3FWRealRate Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upHomeMainStepNumber As Long, ByRef upHomeSubStepNumber As Long, ByRef upHomeLastMainStepNumber As Long, ByRef upHomeLastSubStepNumber As Long) As Long
' Return adjusted position value when escaping sensor zone from origin search.(Only for M3)
Public Declare Function AxmHomeGetM3OffsetAvoideSenArea Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dPos As Double) As Long
' The API for Setting adjusted position value when escaping sensor zone from origin search.(Only for M3)
' If dPos setting value is '0', adjusted position value will be set automatically when automatically escaping.
' 'dPos' should be a positive number.
Public Declare Function AxmHomeSetM3OffsetAvoideSenArea Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dPos As Double) As Long


' Setting usage criterion of absolute encoder. Set whether to CMD/ACT POS initialize after origin search.(Only for M3)
' dwSel: 0, CMD/ACTPOS will be set '0' after origin search.(Default)
' dwSel: 1, CMD/ACTPOS will be not set after origin search.
Public Declare Function AxmM3SetAbsEncOrgResetDisable Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwSel As Long) As Long

' Get 'AxmM3SetAbsEncOrgResetDisable' setting value.(Only for M3)
' upSel: 0, CMD / ACTPOS set to 0 after home search. (Default)
' upSel: 1, CMD / ACTPOS value is not set after home search.
Public Declare Function AxmM3GetAbsEncOrgResetDisable Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upSel As Long) As Long


' Setting whether using alarm maintenance function when switch to slave offline mode.(Only for M3)
' dwSel: 0, ML3 Slave ONLINE-> OFFLINE Alarm handling disabled. (Default)
' dwSel: 1, ML3 Slave ONLINE-> OFFLINE Alarm handling enabled.
Public Declare Function AxmM3SetOfflineAlarmEnable Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwSel As Long) As Long

' Get 'AxmM3SetOfflineAlarmEnable' setting value.(Only for M3)
' upSel: 0, ML3 Slave ONLINE-> OFFLINE Alarm handling disabled. (Default)
' upSel: 1, ML3 Slave ONLINE-> OFFLINE Alarm handling enabled.
Public Declare Function AxmM3GetOfflineAlarmEnable Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upSel As Long) As Long

' Read value of slave online or offline status. (Only for M3)
' upSel: 0, ONLINE->OFFLINE Not converted
' upSel: 1, ONLINE->OFFLINE converted
Public Declare Function AxmM3ReadOnlineToOfflineStatus Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upStatus As Long) As Long

    Public Declare Function AxlSetLockMode Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal wLockMode As Long) As Long
    Public Declare Function AxlSetLockData Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal dwTotalNodeNum As Long, ByRef dwpNodeNo As Long, ByRef dwpNodeID As Long, ByRef dwpLockData As Long) As Long
    Public Declare Function AxmMoveStartPosWithAVC Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dPosition As Double, ByVal dMaxVelocity As Double, ByVal dMaxAccel As Double, ByVal dMinJerk As Double, ByRef dpMoveVelocity As Double, ByRef dpMoveAccel As Double, ByRef dpMoveJerk As Double) As Long

'======== API for EtherCAT only =============================================================================
' The API for read VendorID, ProductCode and RevisionNo of EtherCat slave product by using StationAddress.
Public Declare Function AxlECatGetProductInfo Lib "AXL.dll" (ByVal dwStationAddress As Long, ByRef pdwVendorID As Long, ByRef pdwProductCode As Long, ByRef pdwRevisionNo As Long) As Long
    Public Declare Function AxlECatGetProductInfoEx Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal dwStationAddress As Long, ByRef pdwVendorID As Long, ByRef pdwProductCode As Long, ByRef pdwRevisionNo As Long) As Long

' The API for verifying network status of EtherCAT slave product by using StationAddress.
Public Declare Function AxlECatGetModuleStatus Lib "AXL.dll" (ByVal dwStationAddress As Long) As Long


' Read input PDO(Process Data Objects)
' dwBitOffset     : ProcessImage inputs bit offset value.
' dwDataBitLength : bit size of input pdo data.
' pbyData         : The Buffer for inserting read data.
Public Declare Function AxlECatReadPdoInput Lib "AXL.dll" (ByVal dwBitOffset As Long, ByVal dwDataBitLength As Long, ByRef pbyData As Byte) As Long
    Public Declare Function AxlECatReadPdoInputEx Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal dwBitOffset As Long, ByVal dwDataBitLength As Long, ByRef pbyData As Byte) As Long

